Added header with credits and style

--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
     <title>Dummy Weather App</title>
   </head>
   <body>
-    <div class="container">
+    <header>
+    <a href="https://github.com/robertagelo/My-dummy-weather-app">Open source code</a> made with 🧠 by Roberta Gelo 💝
+    </header>
+    <div class="container-sm app">
       <div class="row">
         <div class="col">
           <form id="search-form">
