Moved header to footer and fixed some styles

--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
     <title>Dummy Weather App</title>
   </head>
   <body>
-    <header>
-    <a href="https://github.com/robertagelo/My-dummy-weather-app">Open source code</a> made with 🧠 by Roberta Gelo 💝
-    </header>
+   
     <div class="container-sm app">
       <div class="row">
         <div class="col">
@@ -59,6 +57,9 @@
         </div>
       </div>
     </div>
+     <footer>
+    <a href="https://github.com/robertagelo/My-dummy-weather-app">Open source code</a> made with 🧠 by Roberta Gelo 💝
+    </footer>
     <script
       src="https://kit.fontawesome.com/c32180b6ee.js"
       crossorigin="anonymous"
